cambios agregados en index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola a todos, este mi curso de Prework.
+        Hola a todos, este mi curso de Prework y además es una prueba para GitHub.
     </p>
 </body>
 </html>
